fixing the collapse

--- a/assets/scss/molecules/_collapse.scss
+++ b/assets/scss/molecules/_collapse.scss
@@ -1,46 +1,108 @@
-.collapse-box {
+.collapse {
     width: 50%;
     border: 2px solid #32b3df;
     margin: 10px auto;
-    padding: .5em;
+    padding: .5em 1em 1em 1em;
     border-radius: .8em;
-    .collapse-h2 {
+    &__title {
         font-size: 2em;
         font-weight: 700;
+        margin-bottom: .5em;
     }
-    .collapse-content {
-        margin-top: 5px;
-        padding: .5em;
-        border: 1px solid #EEE;
-        border-radius: 1em;
+    &__container {
+        padding: 1em;
+        border: 2px solid #EEE;
+        border-radius: .5em;
         text-align: left;
-        .collapse-heading{
+        margin-bottom: 1em;
+        .collapse__plusBox{
+            width: 100%;
             font-size: 1.4em;
             font-weight: 600;
+            cursor: pointer;
+            display: flex;
+            justify-content: space-between;
+            .collapse__heading {
+                font-weight: 600;
+                line-height: 46px;
+            }
+            .collapse__plus {
+                width: 10px;
+                height: .5em;
+                padding: .5em 0;
+                background: transparent;
+                cursor: pointer;
+                z-index: 1;
+                border-right: 4px solid #32b3df;
+                transition:all .2s ease-in-out;
+                transition:border 1s ease-in-out;
+                position: relative;
+            }
         }
         .collapse__subHeading {
             color: #aaa;
-            line-height: 1.2;
+            line-height: 34px;
             font-size: 1em;
             margin: 5px auto;
+            display: none;
+            transition: all .2s ease-in-out;
         }
         .collapse__text {
             font-size: 1em;
             color: #aaa;
+            line-height: 22px;
+            display: none;
+            transition: all .5s ease-in-out;
         }
     }
-    .heading-icon {
-        display: flex;
-        justify-content: space-between;
-        
-        line-height: 1.5;
-        .plus {
-            width: 15px;
-            cursor: pointer;
-        }
-        .active {
-            width: 15px;
-            cursor: pointer;
-        }
+}
+
+// Configuração do Minus 
+.collapse__plus::after {
+    display: inline-block;
+    content: '';
+    position: absolute;
+    width: 30px;
+    height: 5px;
+    background: #32b3df;
+    left: -0.15em;
+    top: .65em;
+    transition: background 1s ease-in-out;
+}
+
+// Collapse__container no Hover
+.collapse__container:hover {
+    background: #32b3df;
+    transition: all .2 ease-in-out;
+    transition: background 1s ease-in-out;
+    .collapse__plus {
+        border-right: 5px solid #FFFFFF;
+    }
+    .collapse__plus::after {
+        background: #FFFFFF;
+    }
+    .collapse__heading, .collapse__text, .collapse__subHeading {
+        color: #FFFFFF;
+    }
+}
+
+// Configuração quando o container receber click
+
+.collapse__container.collapse__opened {
+    
+    transition: height 2s ease-in-out;
+    .collapse__plus {
+        border: none;
+    }
+    .collapse__plus::after {
+        background: #F00;
+        left: -.4em;
+    }
+    .collapse__subHeading, .collapse__text {
+        display: block;
+    }
+    .collapse__heading {
+        display: block;
+        transition: background 2s ease-in-out;
     }
 }
